--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,3 +2,6 @@
    body {
          background-color: lightblue;
         }
+#nav-table { width: 800px;}
+
+#nav-td {width: 200px; text-align:center;)
