--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,7 @@
 
-   body { background-color: #0C75AB;}
+   body { 
+background-color: #0C75AB;
+       }
 #nav-table { width: 800px;}
 
 #nav-td {width: 200px; text-align:center;)
