--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,3 +5,9 @@ background-color: #0C75AB;
 #nav-table { width: 800px;}
 
 #nav-td {width: 200px; text-align:center;)
+
+      .center {
+         display: block;
+         margin-left: auto;
+         margin-right: auto;
+         }
