--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,6 +8,6 @@ background-color: #0C75AB;
 
 .banner {
    display:block;
-   margi-left: auto;
-   margin right: auto;
+   margin-left: auto;
+   margin-right: auto;
  }
