--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,3 +6,7 @@ background-color: #0C75AB;
 
 #nav-td {width: 200px; text-align:center;)
    
+   .center  {
+               margin-left: auto;
+      margin-right: auto;
+            }
